--- a/index.html
+++ b/index.html
@@ -1,68 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
+    <div class="main-container">
+        <aside class="sidebar">
+            <h2 id="contact"></h2>
+            <section>
+                <h2>Chris Cooley</h2>
+                <div class="side-box">
+                    <p>Web Developer</p>
+                </div>
+                <div class="side-box">
+                    <label for="email">EMAIL</label>
+                    <p>chriscooley1984@yahoo.com</p>
+                </div>
+                <div class="side-box">
+                    <label for="phone">PHONE</label>
+                    <p>(915)246-2751</p>
+                </div>
+                <div class="side-box">
+                    <label for="birthday">BIRTHDAY</label>
+                    <p>11/14/84</p>
+                </div>
+                <div class="side-box">
+                    <label for="location">LOCATION</label>
+                    <p>Saint George, UT 84770</p>
+                </div>
+            </section>
+        </aside>
 
-    <h1 id="about">About Me</h1>
-    <p>
-        Hi, I'm Chris Cooley. I love playing ultimate frisbee, bowling, hiking, watching movies and spending time with my girlfriend and her kids.
-    </p>
+        <main>
+            <header>
+                <div class="buttons">
+                    <a href="#about">About</a>
+                    <a href="#projects">Projects</a>
+                    <a href="#contact">Contact</a>
+                </div>
+            </header>
 
-    <h2 id="projects">Projects</h2>
-    <div>
-        <h3>
-            <a 
-                href="https://github.com/chriscooley1/snowboarding-shop" 
-                target="_blank"
-                rel="noopener"
-            >Snowboarding Shop</a>
-        </h3>
-        <p>A small FastAPI app that manages snowboards.</p>
+            <section id="about">
+                <h1>About Me</h1>
+                <p>
+                    Hey, I'm Chris Cooley. I find a lot of joy in the game of ultimate 
+                    frisbee, bowling, hiking, and watching movies. I also love spending time 
+                    with my girlfriend and her wonderful children.
+                </p>
+            </section>
+
+            <section id="projects">
+                <h2>Projects</h2>
+                <div class="project-grid">
+                    <div class="inner-box">
+                        <h3>
+                            <a href="https://github.com/chriscooley1/snowboarding-shop" target="_blank" rel="noopener">Snowboarding Shop</a>
+                        </h3>
+                        <p>A small FastAPI app that manages snowboards.</p>
+                    </div>
+                    
+                    <div class="inner-box">
+                        <h3>
+                            <a href="https://github.com/chriscooley1/animal-shelter" target="_blank" rel="noopener">Shelter</a>
+                        </h3>
+                        <p>A small FastAPI app that manages animal shelters.</p>
+                    </div>
+                    
+                    <div class="inner-box">
+                        <h3>
+                            <a href="https://github.com/chriscooley1/pharmacy-api" target="_blank" rel="noopener">Pharmacy API</a>
+                        </h3>
+                        <p>A small FastAPI app that manages pharmacies.</p>
+                    </div>
+
+                    <div class="inner-box">
+                        <h3>
+                            <a href="https://github.com/chriscooley1/workout-tracker" target="_blank" rel="noopener">Workout Tracker</a>
+                        </h3>
+                        <p>A small FastAPI app that manages workouts.</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- <footer>
+                <p>&copy; Copyright 2024 Cooley Productions. All rights reserved.</p>
+            </footer> -->
+        </main>
     </div>
-    <div>
-        <h3>
-            <a 
-                href="https://github.com/chriscooley1/animal-shelter" 
-                target="_blank"
-                rel="noopener" 
-            >Shelter</a>
-        </h3>
-        <p>A small FastAPI app that manages animal shelters.</p>
-    </div>
-    <div>
-        <h3>
-            <a 
-                href="https://github.com/chriscooley1/pharmacy-api" 
-                target="_blank"
-                rel="noopener"
-            >Pharmacy API</a>
-        </h3>
-        <p>A small FastAPI app that manages pharmacies.</p>
-    </div>
-
-    <h2 id="contact">Contact Me</h2>
-    <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" />
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" />
-
-        <label for="message">Message:</label>
-        <textarea id="message" name="message"></textarea>
-
-        <button type="submit">Submit</button>
-    </form>
-
-    <p>&copy; 2024 Cooley. All rights reserved.</p>
 </body>
 </html>
