--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="project-grid">
                     <div class="inner-box">
                         <h3>
-                            <i class="fas fa-snowflake"></i>
+                            <i class="fas fa-clock"></i>
                             <a href="https://race-the-clock-frontend-production.up.railway.app" target="_blank" rel="noopener">Race the Clock</a>
                         </h3>
                         <p>
@@ -85,7 +85,7 @@
                     
                     <div class="inner-box">
                         <h3>
-                            <i class="fas fa-paw"></i>
+                            <i class="fas fa-puzzle-piece"></i>
                             <a href="https://chriscooley1.github.io/towers-of-hanoi/" target="_blank" rel="noopener">Towers of Hanoi</a>
                         </h3>
                         <p>A simple game built with HTML, CSS, and JavaScript that challenges players to move disks from one peg to another following the rules of the Towers of Hanoi puzzle.</p>
@@ -93,7 +93,7 @@
                     
                     <div class="inner-box">
                         <h3>
-                            <i class="fas fa-pills"></i>
+                            <i class="fas fa-cloud"></i>
                             <a href="https://chriscooley1.github.io/sky-pulse/" target="_blank" rel="noopener">Sky Pulse</a>
                         </h3>
                         <p>A simple game built with HTML, CSS, and JavaScript that challenges players to move disks from one peg to another following the rules of the Towers of Hanoi puzzle.</p>
