Change to react calculator

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <label for="location">LOCATION</label>
                     </div>
-                    <p>Saint George, UT 84770</p>
+                    <p>Saint George, UT 84738</p>
                 </div>
             </section>
         </aside>        
@@ -76,7 +76,7 @@
                     <div class="inner-box">
                         <h3>
                             <i class="fas fa-clock"></i>
-                            <a href="https://race-the-clock-frontend-production.up.railway.app" target="_blank" rel="noopener">Race the Clock</a>
+                            <a href="https://www.race-the-clock.com" target="_blank" rel="noopener">Race the Clock</a>
                         </h3>
                         <p>
                             A web-based learning tool designed to improve recognition and recall skills for students of all ages. It offers customizable collections, adjustable speed settings, and interactive elements to enhance learning experiences. Ideal for teachers and learners, it supports various content types and includes gamification features to motivate users.
@@ -101,10 +101,10 @@
             
                     <div class="inner-box">
                         <h3>
-                            <i class="fas fa-dumbbell"></i>
-                            <a href="https://github.com/chriscooley1/workout-tracker" target="_blank" rel="noopener">Workout Tracker</a>
+                            <i class="fas fa-calculator"></i>
+                            <a href="https://chriscooley1.github.io/simple-react-calculator/" target="_blank" rel="noopener">Simple React Calculator</a>
                         </h3>
-                        <p>A FastAPI app for tracking workouts, including features for logging exercises, setting goals, and monitoring progress. It offers user authentication and personalized workout plans.</p>
+                        <p>A simple calculator built with React that allows users to perform basic arithmetic operations.</p>
                     </div>
                 </div>
             </section>            
