--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <i class="fas fa-calculator"></i>
                             <a href="https://chriscooley1.github.io/simple-react-calculator/" target="_blank" rel="noopener">Simple React Calculator</a>
                         </h3>
-                        <p>A simple calculator built with React that allows users to perform basic arithmetic operations.</p>
+                        <p>A user-friendly calculator built with React, designed to perform basic arithmetic operations with ease and efficiency.</p>
                     </div>
                 </div>
             </section>            
