--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
             
                     <div class="inner-box">
                         <h3>
-                            <i class="fas fa-calculator"></i>
-                            <a href="https://chriscooley1.github.io/simple-react-calculator/" target="_blank" rel="noopener">Simple React Calculator</a>
+                            <i class="fas fa-prescription-bottle-medical"></i>
+                            <a href="https://chriscooley1.github.io/pharma-edu/" target="_blank" rel="noopener">Pharmacy Management System</a>
                         </h3>
-                        <p>A user-friendly calculator built with React, designed to perform basic arithmetic operations with ease and efficiency.</p>
+                        <p>A comprehensive pharmacy management application that allows users to create and manage patient profiles, doctor information, and prescription items. Features include detailed record management and powerful search functionality for efficient healthcare data organization.</p>
                     </div>
                 </div>
             </section>            
